--- a/templates/home.html
+++ b/templates/home.html
@@ -7,10 +7,16 @@
     <div class="col-lg-6 text-lg-start mb-4 mb-lg-0">
       <h1 class="display-5 fw-bold text-dark">SHOWCASE <br>YOUR HUSTLE<br>YOUR BRAND<br>YOUR STOREFRONT <br> SELL SMARTER <br>NOT HARDER <br> <span class="text-primary">WAAP FOLIO IS HERE</span></h1>
       <div class="d-flex gap-2 flex-wrap mt-4 justify-content-center justify-content-lg-start">
-        <a href="{% url 'create_store' %}" class="btn btn-success px-4">Create Store</a>
+        {% if not user.is_authenticated %}
+        <a href="{% url 'login' %}" class="btn btn-success px-4">Create or Login Account</a>
+        {% else %}
         {% if store %}
-          <a href="{% url 'view_store' slug=store.slug %}" class="btn btn-outline-primary px-4">My Store</a>
+            <a href="{% url 'view_store' slug=store.slug %}" class="btn btn-outline-primary px-4">Visit Store</a>
+        {% else %}
+            <a href="{% url 'create_store' %}" class="btn btn-success px-4">Create Store</a>
         {% endif %}
+        {% endif %}
+
       </div>
     </div>
     <div class="col-lg-6 text-center">
