--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="row align-items-center flex-column flex-md-row">
             <div class="col-md-6 mb-4 mb-md-0">
-                <img src="{% static 'images/easy.jpg' %}" class="img-fluid rounded shadow" alt="Mission">
+                <img src="{% static 'images/banner.jpg' %}" class="img-fluid rounded shadow" alt="Mission">
             </div>
             <div class="col-md-6 text-center text-md-start">
                 <h2 class="fw-bold">Our Mission</h2>
